# MAI_OOP_Lab3

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: figure.h  figure_array.h  point3d.h  rectangle.h  square.h  triangle.h
src/: figure.cpp  figure_array.cpp  rectangle.cpp  square.cpp  triangle.cpp
test/: test_rectangle.cpp  test_square.cpp  test_triangle.cpp
